# projeto_tcc

./: .gitignore  DICIONARIO_DE_DADOS.docx  README.md  analytics.ipynb  app.py  app_cluster_streamlit.py  app_cluster_streamlit_corrigido.py  app_novo.py  baixa_arquivos_ftp.ipynb  documentacao.md  eda.ipynb  engenharia_de_dados.ipynb  entrega.ipynb  main.py  modelling hdbscan.ipynb  modelling_pca.ipynb  modelo_final_2.ipynb  modelo_final_3.ipynb  novo_modeling.ipynb  novos_arquivos.ipynb  pre_processamento.ipynb  pyproject.toml  reducao_dimensionalidade.ipynb  reducao_features.ipynb  requirements.txt  tabela_completa_pivot_202506220918.csv
dados/: municipios_clusterizados.csv  municipios_clusterizados.parquet  tabela_completa_estudo.csv  tabela_final.csv  tabela_final.parquet
notebook/: analise_geo.ipynb  eda.ipynb  engenharia_de_dados.ipynb  modelo_final.ipynb  modelo_final_2.ipynb  modelo_final_3.ipynb  novos_arquivos.ipynb  reducao_dimensionalidade.ipynb
scripts/: clusterizacao.py  configs.py  download_data.py  extract_transform.py  load_database.py  tabela_final.py  utils.py
